--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -41,7 +41,7 @@
 }
 .log-in__text {
   padding: 10px;
-  width: 180%;
+  width: 350px;
   height: 30px;
   font-size: 16px;
   font-family: "Josefin Slab", serif;
@@ -62,7 +62,7 @@
 .log-in__checkbox {
   margin-left: 0px;
   position: absolute;
-  left: -80px;
+  left: 0px;
   bottom: 190px;
 }
 
